--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,7 @@
       sizes="16x16"
       href="%PUBLIC_URL%/favicon-16x16.png"
     />
-    <link
-      rel="manifest"
-      crossorigin="use-credentials"
-      href="%PUBLIC_URL%/manifest.json"
-    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="mask-icon"
       href="%PUBLIC_URL%/safari-pinned-tab.svg"
