Change start url to /

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://training-711ed.web.app/signin/" />
+    <meta property="og:url" content="https://training-711ed.web.app/" />
     <meta property="og:title" content="FithOn" />
     <meta
       property="og:description"
@@ -52,10 +52,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://training-711ed.web.app/signin/"
-    />
+    <meta property="twitter:url" content="https://training-711ed.web.app/" />
     <meta property="twitter:title" content="FithOn" />
     <meta
       property="twitter:description"
