--- a/public/index.html
+++ b/public/index.html
@@ -30,16 +30,16 @@
     <link
       rel="mask-icon"
       href="%PUBLIC_URL%/safari-pinned-tab.svg"
-      color="#666666"
+      color="#333333"
     />
     <meta name="apple-mobile-web-app-title" content="FithOn" />
     <meta name="application-name" content="FithOn" />
-    <meta name="msapplication-TileColor" content="#00a300" />
-    <meta name="theme-color" content="#222222" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://training-711ed.web.app/" />
+    <meta property="og:url" content="https://fith-on.web.app/" />
     <meta property="og:title" content="FithOn" />
     <meta
       property="og:description"
@@ -47,12 +47,12 @@
     />
     <meta
       property="og:image"
-      content="https://training-711ed.web.app/static/assets/images/fithon-logo.png"
+      content="https://fith-on.web.app/android-chrome-192x192.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://training-711ed.web.app/" />
+    <meta property="twitter:url" content="https://fith-on.web.app/" />
     <meta property="twitter:title" content="FithOn" />
     <meta
       property="twitter:description"
@@ -60,7 +60,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://training-711ed.web.app/static/assets/images/fithon-logo.png"
+      content="https://fith-on.web.app/android-chrome-192x192.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
