--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <meta name="apple-mobile-web-app-title" content="FithOn" />
     <meta name="application-name" content="FithOn" />
     <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#424242" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
