Update mask-icon color

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <link
       rel="mask-icon"
       href="%PUBLIC_URL%/safari-pinned-tab.svg"
-      color="#333333"
+      color="#fff"
     />
     <meta name="apple-mobile-web-app-title" content="FithOn" />
     <meta name="application-name" content="FithOn" />
