--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
       href="%PUBLIC_URL%/apple-touch-icon.png"
     />
     <link
+      rel="apple-touch-icon-precomposed"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon-precomposed.png"
+    />
+    <link
       rel="icon"
       type="image/png"
       sizes="32x32"
@@ -30,12 +35,12 @@
     <link
       rel="mask-icon"
       href="%PUBLIC_URL%/safari-pinned-tab.svg"
-      color="#fff"
+      color="#fb8c00"
     />
     <meta name="apple-mobile-web-app-title" content="FithOn" />
     <meta name="application-name" content="FithOn" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#949356" />
+    <meta name="msapplication-TileColor" content="#fb8c00" />
+    <meta name="theme-color" content="#424242" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
